<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="8dp"
    tools:context=".PhoneActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/model"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPhoneName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/tvPhoneYear"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/specs"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/chipset"
                android:textAllCaps="true"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvPhoneChipset"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:textSize="22sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginVertical="4dp"
                android:background="@drawable/hr_color_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/operating_system"
                android:textAllCaps="true"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvPhoneOS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:textSize="16sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginVertical="4dp"
                android:background="@drawable/hr_color_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/storage"
                android:textAllCaps="true"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvPhoneStorage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:textSize="16sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginVertical="4dp"
                android:background="@drawable/hr_color_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/weight"
                android:textAllCaps="true"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvPhoneWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:textSize="16sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginVertical="4dp"
                android:background="@drawable/hr_color_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/display"
                android:textAllCaps="true"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvPhoneDisplayType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvPhoneDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:textSize="16sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginVertical="4dp"
                android:background="@drawable/hr_color_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/battery"
                android:textAllCaps="true"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvPhoneBattery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="8dp">

        <TextView
            android:id="@+id/tvPhonePrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:textSize="48sp" />

    </androidx.cardview.widget.CardView>


</LinearLayout>